1999-02-25  Dag Lem  <resid@nimrod.no>

	* Version 0.7 released.

	* configure.in: Check whether compiler supports bool.

	* extfilt.h, extfilt.cc: Implementation of C64 filter, external to
	the SID chip.

	* filter.h (Filter::clock): Optimized filter routing using a switch.
	(Filter::output): Optimized filter mixing using a switch, avoiding
	integer division. Corrected sign of filtered output, which is
	inverted compared to unfiltered output.
	
	* filter.cc (Filter::set_w0): Removed use of M_PI and math.h
	functions. Use spline table to map fc to w0.
	(Filter::fc_default): Return array of FC spline interpolation points.
	(Filter::fc_plotter): Return FC spline plotter object.

	* sid.h (SID::enable_external_filter): Enable/disable external
	filter.
	(SID::fc_default): Return array of FC spline interpolation points.
	(SID::fc_plotter): Return FC spline plotter object.
	(SID:State, SID::read_state, SID::write_state): Read and write
	complete SID state.
	
	* sid.cc (SID::clock): Age bus value. Clock external filter.
	(SID::enable_external_filter): Enable/disable external filter.
	
	* spline.h: Spline implementation. Used to specify mapping from
	the FC register to filter cutoff frequency.

1998-11-14  Dag Lem  <resid@nimrod.no>

	* Version 0.6 released.

	* configure.in: Allow compilation in a separate directory.

	* wave.h (WaveformGenerator::synchronize): Handle special case when a
	sync source is synced itself on the same cycle as its MSB is set
	high.

	* sid.cc (SID::clock): Only clock on MSB on/off for hard sync.

1998-09-06  Dag Lem  <resid@nimrod.no>

	* Version 0.5 released.

	* version.cc (resid_version_string): Version string with C linkage.
	
	* wave.cc (WaveformGenerator::set_chip_model): Emulation of MOS8580
	combined waveforms.

1998-08-28  Dag Lem  <resid@nimrod.no>

	* Version 0.4 released.

	* envelope.h (EnvelopeGenerator::clock): Count up to rate_period twice
	during ADSR delay bug, and add one extra rate counter step.
